# docs/swagger.yaml
@@ -395,6 +395,16 @@ definitions:
     x-enum-varnames:
     - BadgeStatusActive
     - BadgeStatusInactive
+  schema.BatchRemoveProjectReq:
+    properties:
+      ids:
+        items:
+          type: string
+        minItems: 1
+        type: array
+    required:
+    - ids
+    type: object
   schema.CloseQuestionReq:
     properties:
       close_msg:
@@ -494,6 +504,130 @@ definitions:
         type: string
       name:
         type: string
+    type: object
+  schema.ContentPageReq:
+    properties:
+      content_type:
+        description: '1: question, 2: article, 0: all'
+        enum:
+        - 1
+        - 2
+        type: integer
+      in_days:
+        minimum: 1
+        type: integer
+      order:
+        enum:
+        - newest
+        - active
+        - hot
+        - score
+        - frequent
+        type: string
+      page:
+        minimum: 1
+        type: integer
+      page_size:
+        minimum: 1
+        type: integer
+      tag:
+        maxLength: 100
+        type: string
+      username:
+        maxLength: 100
+        type: string
+    type: object
+  schema.ContentPageResp:
+    properties:
+      accepted_answer_id:
+        type: string
+      answer_count:
+        type: integer
+      collection_count:
+        type: integer
+      created_at:
+        type: integer
+      description:
+        type: string
+      follow_count:
+        type: integer
+      id:
+        type: string
+      last_answer_id:
+        type: string
+      last_answered_at:
+        type: string
+      last_answered_user_info:
+        $ref: '#/definitions/schema.UserBasicInfo'
+      operated_at:
+        type: integer
+      operation_type:
+        type: string
+      operator:
+        $ref: '#/definitions/schema.QuestionPageRespOperator'
+      pin:
+        type: integer
+      show:
+        type: integer
+      status:
+        type: integer
+      tags:
+        items:
+          $ref: '#/definitions/schema.TagResp'
+        type: array
+      title:
+        type: string
+      type:
+        type: integer
+      type_name:
+        type: string
+      unique_view_count:
+        type: integer
+      url_title:
+        type: string
+      view_count:
+        type: integer
+      vote_count:
+        type: integer
+    type: object
+  schema.CreateProjectReq:
+    properties:
+      code_type:
+        enum:
+        - 1
+        - 2
+        - 3
+        type: integer
+      content:
+        minLength: 1
+        type: string
+      cover:
+        type: string
+      description:
+        maxLength: 1000
+        minLength: 1
+        type: string
+      question_id:
+        type: string
+      repo_url:
+        additionalProperties:
+          type: string
+        type: object
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - code_type
+    - content
+    - description
+    - question_id
+    - repo_url
+    - title
     type: object
   schema.CreateVideoReq:
     properties:
@@ -1544,6 +1678,56 @@ definitions:
           $ref: '#/definitions/constant.Privilege'
         type: array
     type: object
+  schema.ProjectPageResp:
+    properties:
+      count:
+        type: integer
+      list:
+        items:
+          $ref: '#/definitions/schema.ProjectResp'
+        type: array
+    type: object
+  schema.ProjectResp:
+    properties:
+      answer_count:
+        type: integer
+      code_type:
+        type: integer
+      code_type_name:
+        type: string
+      content:
+        type: string
+      cover:
+        type: string
+      created_at:
+        type: integer
+      description:
+        type: string
+      id:
+        type: string
+      question_id:
+        type: string
+      repo_url:
+        additionalProperties:
+          type: string
+        type: object
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      updated_at:
+        type: integer
+      user_id:
+        type: string
+      user_info:
+        $ref: '#/definitions/schema.UserBasicInfo'
+      view_count:
+        type: integer
+      vote_count:
+        type: integer
+    type: object
   schema.QuestionAdd:
     properties:
       captcha_code:
@@ -1566,6 +1750,12 @@ definitions:
         maxLength: 150
         minLength: 6
         type: string
+      type:
+        description: 'content type (1: question, 2: article)'
+        enum:
+        - 1
+        - 2
+        type: integer
     required:
     - content
     - tags
@@ -1638,7 +1828,6 @@ definitions:
   schema.QuestionPageResp:
     properties:
       accepted_answer_id:
-        description: answer information
         type: string
       answer_count:
         type: integer
@@ -1654,18 +1843,19 @@ definitions:
         type: string
       last_answer_id:
         type: string
+      last_answered_at:
+        type: string
+      last_answered_user_info:
+        $ref: '#/definitions/schema.UserBasicInfo'
       operated_at:
-        description: operator information
         type: integer
       operation_type:
         type: string
       operator:
         $ref: '#/definitions/schema.QuestionPageRespOperator'
       pin:
-        description: '1: unpin, 2: pin'
         type: integer
       show:
-        description: '0: show, 1: hide'
         type: integer
       status:
         type: integer
@@ -1680,7 +1870,6 @@ definitions:
       url_title:
         type: string
       view_count:
-        description: question statistical information
         type: integer
       vote_count:
         type: integer
@@ -1827,6 +2016,13 @@ definitions:
         type: string
     required:
     - comment_id
+    type: object
+  schema.RemoveProjectReq:
+    properties:
+      id:
+        type: string
+    required:
+    - id
     type: object
   schema.RemoveQuestionReq:
     properties:
@@ -2574,6 +2770,45 @@ definitions:
         minimum: 1
     required:
     - level
+    type: object
+  schema.UpdateProjectReq:
+    properties:
+      code_type:
+        enum:
+        - 1
+        - 2
+        - 3
+        type: integer
+      content:
+        minLength: 1
+        type: string
+      cover:
+        type: string
+      description:
+        maxLength: 1000
+        minLength: 1
+        type: string
+      id:
+        type: string
+      repo_url:
+        additionalProperties:
+          type: string
+        type: object
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - code_type
+    - content
+    - description
+    - id
+    - repo_url
+    - title
     type: object
   schema.UpdateReactionReq:
     properties:
@@ -5016,6 +5251,40 @@ paths:
       summary: unbind external user login
       tags:
       - PluginConnector
+  /answer/api/v1/content/page:
+    get:
+      consumes:
+      - application/json
+      description: get content (questions and articles) by page
+      parameters:
+      - description: ContentPageReq
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.ContentPageReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/pager.PageModel'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/schema.ContentPageResp'
+                        type: array
+                    type: object
+              type: object
+      summary: get content (questions and articles) by page
+      tags:
+      - Question
   /answer/api/v1/embed/config:
     get:
       consumes:
@@ -5050,6 +5319,8 @@ paths:
         - post_attachment
         - avatar
         - branding
+        - project
+        - video
         in: formData
         name: source
         required: true
@@ -5696,6 +5967,171 @@ paths:
       summary: render post content
       tags:
       - Upload
+  /answer/api/v1/project:
+    delete:
+      consumes:
+      - application/json
+      description: 删除项目
+      parameters:
+      - description: project
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.RemoveProjectReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: 删除项目
+      tags:
+      - Project
+    post:
+      consumes:
+      - application/json
+      description: 添加项目
+      parameters:
+      - description: project
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.CreateProjectReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: 添加项目
+      tags:
+      - Project
+    put:
+      consumes:
+      - application/json
+      description: 更新项目
+      parameters:
+      - description: project
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.UpdateProjectReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: 更新项目
+      tags:
+      - Project
+  /answer/api/v1/project/batch-delete:
+    delete:
+      consumes:
+      - application/json
+      description: 批量删除项目
+      parameters:
+      - description: project ids
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/schema.BatchRemoveProjectReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.RespBody'
+      security:
+      - ApiKeyAuth: []
+      summary: 批量删除项目
+      tags:
+      - Project
+  /answer/api/v1/project/info:
+    get:
+      consumes:
+      - application/json
+      description: 获取项目详情
+      parameters:
+      - description: project id
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.ProjectResp'
+              type: object
+      summary: 获取项目详情
+      tags:
+      - Project
+  /answer/api/v1/project/page:
+    get:
+      consumes:
+      - application/json
+      description: 获取项目分页列表
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: page size
+        in: query
+        name: page_size
+        type: integer
+      - description: search
+        in: query
+        name: search
+        type: string
+      - description: code type
+        in: query
+        name: code_type
+        type: integer
+      - description: tags
+        in: query
+        name: tags
+        type: string
+      - description: order
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.ProjectPageResp'
+              type: object
+      summary: 获取项目分页列表
+      tags:
+      - Project
   /answer/api/v1/question:
     delete:
       consumes:
